修复 scripts 以免工作流报错，添加 README 文件

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "files": [
     "dist"
   ],
-  "scripts": {},
+  "scripts": {
+    "build": "vite build"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/chongiou/create-kodex-app.git"
